--- a/www/map.html
+++ b/www/map.html
@@ -278,14 +278,14 @@ font-weight: 400;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 12px;
+            gap: 13px;
             padding: 15px 20px;
             position: relative;
         }
 
         .icon-item {
-            width: 35px;
-            height: 35px;
+            width: 40px;
+            height: 40px;
             border: 1px solid #7B8CFF;
             border-radius: 50%;
             display: flex;
@@ -692,25 +692,19 @@ backdrop-filter: blur(6px);
       <!-- آیکون سمت راست (Default) -->
       <a href="" style="padding-right: 3px;">
        
- <svg class="default-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <!-- دایره اصلی -->
-  <path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd"
-        d="M0.75 11.75C0.75 3.4994 3.5 0.75 11.75 0.75C20.0001 0.75 22.75 3.4994 22.75 11.75C22.75 19.9994 20.0001 22.75 11.75 22.75C3.5 22.75 0.75 19.9994 0.75 11.75Z"
-        stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-
-  <!-- علامت + در مرکز دایره -->
-  <g transform="translate(12 15)"> <!-- مرکز دایره (11.75 ~ 12) -->
-    <!-- خط عمودی -->
-    <path d="M0 -2L0 2" stroke="#706DF2" stroke-width="2" stroke-linecap="round"/>
-    <!-- خط افقی -->
-    <path d="M-5 0H5" stroke="#706DF2" stroke-width="1.45" stroke-linecap="round"/>
+ <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g clip-path="url(#clip0_1575_3272)">
+    <path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd" d="M1 12C1 3.7494 3.75 1 12 1C20.2501 1 23 3.7494 23 12C23 20.2494 20.2501 23 12 23C3.75 23 1 20.2494 1 12Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M7 8H17" stroke="#706DF2" stroke-width="1.45" stroke-linecap="round"/>
+    <path d="M10 7.00488L10 9.00488" stroke="#706DF2" stroke-width="2" stroke-linecap="round"/>
+    <path d="M14 15L14 17" stroke="#706DF2" stroke-width="2" stroke-linecap="round"/>
+    <path d="M7 16H17" stroke="#706DF2" stroke-width="1.45" stroke-linecap="round"/>
   </g>
-    <g transform="translate(12 8)"> <!-- مرکز دایره (11.75 ~ 12) -->
-    <!-- خط عمودی -->
-    <path d="M0 -2L0 2" stroke="#706DF2" stroke-width="2" stroke-linecap="round"/>
-    <!-- خط افقی -->
-    <path d="M-5 0H5" stroke="#706DF2" stroke-width="1.45" stroke-linecap="round"/>
-  </g>
+  <defs>
+    <clipPath id="clip0_1575_3272">
+      <rect width="24" height="24" fill="white"/>
+    </clipPath>
+  </defs>
 </svg>
 
 
@@ -725,34 +719,74 @@ backdrop-filter: blur(6px);
             <!-- Icon Bar -->
             <div class="icon-bar">
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M20.5261 7.5L20.5261 15.2959C20.5261 17.4498 18.8057 19.1981 16.6861 19.1981H7.06985C4.95034 19.1981 3.22987 17.4498 3.22987 15.2959L3.22986 7.5" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M3.22986 15.0898V21.9636" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <path d="M9.16309 19.1973V21.9627" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <path d="M14.5862 19.1973V21.9627" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <path d="M20.526 15.2891V21.9634" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <path d="M1 10C1 10 8.194 2 12.0733 2C15.7107 2 23 10 23 10" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <g opacity="0.4">
+    <path d="M11.8126 10.0303C12.8712 10.0303 13.7293 9.15828 13.7293 8.08255C13.7293 7.00682 12.8712 6.13477 11.8126 6.13477C10.754 6.13477 9.89587 7.00682 9.89587 8.08255C9.89587 9.15828 10.754 10.0303 11.8126 10.0303Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M14.5383 15.0499C14.5383 13.5422 13.3137 12.3242 11.8126 12.3242C10.3049 12.3242 9.08691 13.5488 9.08691 15.0499" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M9.08691 15.0508V18.8668" stroke="#706DF2" stroke-width="1.5"/>
+    <path d="M14.5383 15.0508V18.8668" stroke="#706DF2" stroke-width="1.5"/>
+  </g>
+</svg>
                 </div>
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M20.7191 17.627C20.7191 19.8101 18.9491 21.587 16.759 21.587H6.85544C4.67225 21.587 2.89539 19.817 2.89539 17.627" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M1.48352 21.5868C1.48352 21.5868 8.23972 2 11.883 2C15.299 2 22.1447 21.5868 22.1447 21.5868" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <g opacity="0.4">
+    <path d="M11.7453 12.5026C12.8598 12.5026 13.7632 11.5992 13.7632 10.4847C13.7632 9.37024 12.8598 8.4668 11.7453 8.4668C10.6309 8.4668 9.72742 9.37024 9.72742 10.4847C9.72742 11.5992 10.6309 12.5026 11.7453 12.5026Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M14.6654 21.9999V17.8883C14.6654 16.3112 13.3844 15.0371 11.8141 15.0371C10.237 15.0371 8.96289 16.3181 8.96289 17.8883V21.9999" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  </g>
+</svg>
                 </div>
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g opacity="0.4">
+    <path d="M10.2043 21.6731V18.2421C10.2043 16.8031 9.03316 15.6406 7.59757 15.6406C6.15569 15.6406 4.99084 16.8094 4.99084 18.2421V21.6731" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M7.59754 13.3562C8.61643 13.3562 9.4424 12.5319 9.4424 11.515C9.4424 10.4982 8.61643 9.67383 7.59754 9.67383C6.57866 9.67383 5.75269 10.4982 5.75269 11.515C5.75269 12.5319 6.57866 13.3562 7.59754 13.3562Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  </g>
+  <path d="M13.4847 13.8435H19.4726C20.8641 13.8435 21.9912 14.9683 21.9912 16.3571V20.429C21.9912 21.2962 21.286 22 20.4171 22H3.57411C2.7052 22 2 21.2962 2 20.429V5.14194C2 3.40759 3.4104 2 5.14822 2H10.0406C11.7784 2 13.1888 3.40759 13.1888 5.14194V13.5482C13.1888 13.7116 13.321 13.8435 13.4847 13.8435Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M15.2037 8.92383H13.1888" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M17.8797 11.4373C19.2706 11.4373 20.3982 10.3119 20.3982 8.92371C20.3982 7.53551 19.2706 6.41016 17.8797 6.41016C16.4887 6.41016 15.3611 7.53551 15.3611 8.92371C15.3611 10.3119 16.4887 11.4373 17.8797 11.4373Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M13.1888 13V21.3402" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+</svg>
                 </div>
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M17.3151 13.8887H20.5671C21.3552 13.8887 22 14.4181 22 15.0651V20.7122C22 21.3593 21.3552 21.8887 20.5671 21.8887H3.43293C2.64482 21.8887 2 21.3593 2 20.7122V15.0651C2 14.4181 2.64482 13.8887 3.43293 13.8887H6.91203" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M6.44446 8V21.8889M17.5556 8V21.8889" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <g opacity="0.4">
+    <path d="M14.7777 21.3327V17.7102C14.7777 16.0318 13.5297 14.666 11.9999 14.666C10.4634 14.666 9.22217 16.0318 9.22217 17.7102V21.3327" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M11.7221 12.4436C12.805 12.4436 13.6828 11.573 13.6828 10.4991C13.6828 9.42524 12.805 8.55469 11.7221 8.55469C10.6393 8.55469 9.76147 9.42524 9.76147 10.4991C9.76147 11.573 10.6393 12.4436 11.7221 12.4436Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  </g>
+  <path d="M4 11C4 11 9.232 3 12.0533 3C14.6987 3 20 11 20 11" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+</svg>
                 </div>
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g opacity="0.4">
+    <path d="M14.5671 21.6374V17.7457C14.5671 16.1135 13.2454 14.7949 11.6251 14.7949C9.99777 14.7949 8.68311 16.1207 8.68311 17.7457V21.6374" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M15 7H8" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+    <path d="M15 11H8" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  </g>
+  <path d="M7.55315 2H15.6899C17.6512 2 19.243 3.59658 19.243 5.56379V19.8617C19.243 21.0449 18.2908 22 17.1111 22H6.13189C4.95225 22 4 21.0449 4 19.8617V5.56379C4 3.59658 5.59181 2 7.55315 2Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+</svg>
                 </div>
                 <div class="icon-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M2.58484 6.17195C2.58484 6.17195 6.3675 2 8.43284 2C10.367 2 14.2808 6.17195 14.2808 6.17195" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <path d="M12.7216 4.56898L13.4036 13.19L18.3532 14.5191C19.4673 14.7396 20.276 15.7181 20.276 16.8605V20.5865C20.276 21.367 19.6426 22.0004 18.8622 22.0004H4.86502C4.08458 22.0004 3.45117 21.367 3.45117 20.5865L4.33922 4.41797" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  <path d="M13.4037 13.1895L14.0001 21.4999" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
+  <g opacity="0.4">
+    <path d="M11.2975 21.5701V18.1711C11.2975 16.7455 10.1373 15.5938 8.71504 15.5938C7.28657 15.5938 6.13257 16.7517 6.13257 18.1711V21.5701" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+    <path d="M8.50604 13.3297C9.51545 13.3297 10.3337 12.5131 10.3337 11.5057C10.3337 10.4983 9.51545 9.68164 8.50604 9.68164C7.49663 9.68164 6.67834 10.4983 6.67834 11.5057C6.67834 12.5131 7.49663 13.3297 8.50604 13.3297Z" stroke="#706DF2" stroke-width="1.5" stroke-miterlimit="10"/>
+  </g>
+</svg>
                 </div>
             </div>
 
