--- a/www/start.html
+++ b/www/start.html
@@ -34,8 +34,18 @@
     <div class="action-buttons">
         <a href="signup.html" class="btn btn-primary">Signup</a>
         
-        <a href="signup.html" style="font-size: 20px; text-decoration: none;" class="btn btn-secondary">Signin</a>
+        <a href="signin.html" style="font-size: 20px; text-decoration: none;" class="btn btn-secondary">Signin</a>
     </div>
 </body>
+<script>
+    // ========================================
+// 🛡️ بررسی وضعیت ورود (Protection)
+// ========================================
+const ACCESS_TOKEN = localStorage.getItem('access_token');
 
+if (ACCESS_TOKEN) {
+    console.log('✅ Access Token found. Redirecting to Home.');
+    window.location.href = './home.html';
+}
+</script>
 </html>
