Apply latest updates

--- a/www/home.html
+++ b/www/home.html
@@ -2329,11 +2329,11 @@ height: 30px;
       <a href="./Reservation-booking-active.html" class="text-decoration-none">
         <div class="fara-bottom-item">
         <span class="fara-bottom-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" viewBox="0 0 22 20" fill="none">
-  <path opacity="0.4" d="M12.1808 0.855469V3.65047" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-  <path opacity="0.4" d="M12.1808 15.5332V17.8703" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-  <path opacity="0.4" d="M12.1808 12.3756V6.80859" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-  <path fill-rule="evenodd" clip-rule="evenodd" d="M20.75 11.8557C17.9177 11.8557 17.9177 7.53807 20.75 7.53807C20.75 2.5355 20.75 0.75 10.75 0.75C0.75 0.75 0.75 2.5355 0.75 7.53807C3.58236 7.53807 3.58236 11.8557 0.75 11.8557C0.75 16.8593 0.75 18.6447 10.75 18.6447C20.75 18.6447 20.75 16.8593 20.75 11.8557Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path opacity="0.4" d="M13.4308 3.10547V5.90047" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M13.4308 17.7832V20.1203" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M13.4308 14.6256V9.05859" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M22 14.1057C19.1677 14.1057 19.1677 9.78807 22 9.78807C22 4.7855 22 3 12 3C2 3 2 4.7855 2 9.78807C4.83236 9.78807 4.83236 14.1057 2 14.1057C2 19.1093 2 20.8947 12 20.8947C22 20.8947 22 19.1093 22 14.1057Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </span>
       </div>
@@ -2341,9 +2341,9 @@ height: 30px;
       <a href="./profile.html">
         <div class="fara-bottom-item">
         <span class="fara-bottom-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="22" viewBox="0 0 18 22" fill="none">
-  <path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd" d="M8.54146 14.3672C4.33889 14.3672 0.75 15.0026 0.75 17.5473C0.75 20.092 4.31612 20.7502 8.54146 20.7502C12.744 20.7502 16.3319 20.1138 16.3319 17.5701C16.3319 15.0264 12.7668 14.3672 8.54146 14.3672Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.54141 10.7374C11.2993 10.7374 13.5346 8.5011 13.5346 5.7432C13.5346 2.9853 11.2993 0.75 8.54141 0.75C5.78351 0.75 3.54715 2.9853 3.54715 5.7432C3.53786 8.49178 5.75867 10.7281 8.50622 10.7374H8.54141Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path opacity="0.4" fill-rule="evenodd" clip-rule="evenodd" d="M11.7915 15.6172C7.58889 15.6172 4 16.2526 4 18.7973C4 21.342 7.56612 22.0002 11.7915 22.0002C15.994 22.0002 19.5819 21.3638 19.5819 18.8201C19.5819 16.2764 16.0168 15.6172 11.7915 15.6172Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M11.7914 11.9874C14.5493 11.9874 16.7846 9.7511 16.7846 6.9932C16.7846 4.2353 14.5493 2 11.7914 2C9.03351 2 6.79715 4.2353 6.79715 6.9932C6.78786 9.74178 9.00867 11.9781 11.7562 11.9874H11.7914Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </span>
       </div>
